--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.securova.server</groupId>
-    <artifactId>soc-etl</artifactId>
+    <artifactId>lite-etl</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
